cron_log.txt
/opt/anaconda3/envs/bank_dash/bin/python: can't open file '/Users/gtmagrwl/Downloads/akashvani/akashvani.py': [Errno 2] No such file or directory
  File "/Users/gtmagrwl/Library/CloudStorage/GoogleDrive-gautam.4garwal@gmail.com/My Drive/Python Scripts/akashvani.py", line 66
    items=rss_items
          ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
Unstaged changes after reset:
M	feed.xml
[main 28a3c32] News Update 2026-03-10
 2 files changed, 8 insertions(+), 1 deletion(-)
 create mode 100644 cron_log.txt
fatal: could not read Username for 'https://github.com': Device not configured
Starting Update...
✓ feed.xml updated with encoded URLs
Syncing with GitHub...
Git error: Command '['git', 'push', 'origin', 'main', '--force']' returned non-zero exit status 128.
Unstaged changes after reset:
M	cron_log.txt
M	feed.xml
